--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../airplanet/style.css">
     <title>Airplanet</title>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
-            <a href="#" class="logo"> 
-                <img class="logo__picture" src="" alt="Логотип компании">
-            </a>
-            <div class="company-contacts">
-                <a href="tel:+78000039210" class="company-contacts__phone">8 (800 ) 00-392-10</a>
-                <div class="company-contacts__text">График работы</div>
+            <div class="conteiner">
+                    <a href="#" class="logo"> 
+                        <img class="logo__picture" src="../airplanet/file/logo_header.png" alt="Логотип компании">
+                    </a>
+                    <div class="company-contacts">
+                        <a href="tel:+78000039210" class="company-contacts__phone">8 (800) 00-392-10</a>
+                        <div class="company-contacts__text">График работы</div>
+                    </div>
             </div>
         </header>
-
         <div class="sidebar">
             <ul class="nav">
                 <li class="nav__item">
