--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="conteiner">
+            <div class="conteiner header__conteiner">
                     <a href="#" class="logo"> 
                         <img class="logo__picture" src="../airplanet/file/logo_header.png" alt="Логотип компании">
                     </a>
@@ -21,132 +21,130 @@
                     </div>
             </div>
         </header>
-        <div class="sidebar">
-            <ul class="nav">
-                <li class="nav__item">
-                    <div class="nav__icon">
-                        <img src="" class="sidebar__menu-img" alt="">
-                    </div>
-                    <div class="nav__title">
-                        Главная
-                    </div>
-                </li>
-                <li class="nav__item">
-                        <div class="nav__icon">
-                            <img src="" class="sidebar__menu-img" alt="">
-                        </div>
-                        <div class="nav__title">
-                            Отзывы
-                        </div>
-                </li>
-                <li class="nav__item">
-                        <div class="nav__icon">
-                            <img src="" class="sidebar__menu-img" alt="">
-                        </div>
-                        <div class="nav__title">
-                            Экипаж
-                        </div>
-                </li>
-            </ul>
-        </div>
-        <div class="banner">
-            <img src="file/airbas.png" alt="Баннер" class="banner__preview-img">
-        </div>
-        <div class="tariff">
-            <div class="tariff__standard">
-                <img src="#" alt="" class="tariff__standart-preview-img">
-                <h2>Стандарт</h2>
-                <p>Создан для вашего комфортного отдыха</p>
-                <ul>
-                    <li>Питание включено</li>
-                    <li>Багаж (5 кг)</li>
-                    <li>Детское кресло</li>
-                </ul>
-            </div>
-            <div class="tariff__premium">
-                    <img src="#" alt="" class="tariff__premium-preview-img">
-                    <h2>Премиум</h2>
-                    <p>Создан для вашего комфортного отдыха</p>
-                    <ul>
-                        <li>Питание включено</li>
-                        <li>Багаж (5 кг)</li>
-                        <li>Детское кресло</li>
+        <div class="maincontent">
+            <div class="conteiner">
+                <div class="sidebar">
+                    <ul class="nav">
+                        <li class="nav__item">
+                            <div class="nav__icon">
+                                <img src="./file/menu/main_icon.png" class="sidebar__menu-img" alt="">
+                            </div>
+                            <a href="#" class="nav__title">Главная</a>
+                        </li>
+                        <li class="nav__item">
+                                <div class="nav__icon">
+                                    <img src="./file/menu/feed_icon.png" class="sidebar__menu-img" alt="">
+                                </div>
+                                <a href="#" class="nav__title">Отзывы</a>
+                        </li>
+                        <li class="nav__item">
+                                <div class="nav__icon">
+                                    <img src="./file/menu/team_icon.png" class="sidebar__menu-img" alt="">
+                                </div>
+                                <a href="#" class="nav__title">Экипаж</a>
+                        </li>
                     </ul>
-            </div>
-            <div class="tariff__luxury">
-                    <img src="#" alt="" class="tariff__luxury-preview-img">
-                    <h2>Лакшери</h2>
-                    <p>Создан для вашего комфортного отдыха</p>
-                    <ul>
-                        <li>Питание включено</li>
-                        <li>Багаж (5 кг)</li>
-                        <li>Детское кресло</li>
+                </div>
+                <div class="banner">
+                    <img src="file/airbas.png" alt="Баннер" class="banner__preview-img">
+                </div>
+                <div class="tariff">
+                    <div class="tariff__standard">
+                        <img src="#" alt="" class="tariff__standart-preview-img">
+                        <h2>Стандарт</h2>
+                        <p>Создан для вашего комфортного отдыха</p>
+                        <ul>
+                            <li>Питание включено</li>
+                            <li>Багаж (5 кг)</li>
+                            <li>Детское кресло</li>
+                        </ul>
+                    </div>
+                    <div class="tariff__premium">
+                            <img src="#" alt="" class="tariff__premium-preview-img">
+                            <h2>Премиум</h2>
+                            <p>Создан для вашего комфортного отдыха</p>
+                            <ul>
+                                <li>Питание включено</li>
+                                <li>Багаж (5 кг)</li>
+                                <li>Детское кресло</li>
+                            </ul>
+                    </div>
+                    <div class="tariff__luxury">
+                            <img src="#" alt="" class="tariff__luxury-preview-img">
+                            <h2>Лакшери</h2>
+                            <p>Создан для вашего комфортного отдыха</p>
+                            <ul>
+                                <li>Питание включено</li>
+                                <li>Багаж (5 кг)</li>
+                                <li>Детское кресло</li>
+                            </ul>
+                    </div>
+                </div>
+                <div class="latest-news">
+                    <h2 class="latest-news__title">Последние новости</h2>
+                    <ul class="latest-news__list">
+                        <li class="latest-news__item">
+                            <div class="latest-news__avatar">
+                                <img src="file/otziv/1.png" class="latest-news__avatar-img" alt="">
+                            </div>
+                            <div class="reviews__desc">
+                                <div class="reviews__date">12.10.2016</div>
+                                <div class="reviews__news-name">Ночные перелёты дешевле!</div>
+                                <p class="reviews__desc-text">Летящий в ночном небе самолет — зрелище загадочное и романтическое. Крылатая машина величественно плывет в вышине, мерцая разноцветными огнями, и почему-то кажется, что она наполнена удивительными людьми, спешащими далеко-далеко по очень важным делам. </p>
+                            </div>
+                        </li>
+                        <li class="latest-news__item">
+                                <div class="latest-news__avatar">
+                                    <img src="file/otziv/2.png" class="latest-news__avatar-img" alt="">
+                                </div>
+                                <div class="reviews__desc">
+                                    <div class="reviews__date">01.02.2016</div>
+                                    <div class="reviews__news-name">Путешествие в Грузию стало доступнее</div>
+                                    <p class="reviews__desc-text">Экскурсии по Грузии в 2017 году от русских гидов: самые интересные маршруты в Грузии от профессиональных гидов. Обзорные, пешеходные, автомобильные, тематические экскурсии по интересным городам и курортам Грузии. Не пропустите такую возможность!</p>
+                                </div>
+                        </li>
+                        <li class="latest-news__item">
+                                <div class="latest-news__avatar">
+                                    <img src="file/otziv/3.png" class="latest-news__avatar-img" alt="">
+                                </div>
+                                <div class="reviews__desc">
+                                    <div class="reviews__date">22.12.2015</div>
+                                    <div class="reviews__news-name">Детские авиабилеты доступны для бизнес-класса</div>
+                                    <p class="reviews__desc-text">Путешествие на самолете с детьми - небольшое испытание для родителей. Но это не экстремальное приключение, а обычный цивилизованный поход. Тем более, различные авиакомпании стараются помочь скидками на детские авиабилеты, специальным питанием и другими услугами на борту лайнера.</p>
+                                </div>
+                        </li>
                     </ul>
-            </div>
-        </div>
-        <div class="latest-news">
-            <h2 class="latest-news__title">Последние новости</h2>
-            <ul class="latest-news__list">
-                <li class="latest-news__item">
-                    <div class="latest-news__avatar">
-                        <img src="file/otziv/1.png" class="latest-news__avatar-img" alt="">
+                </div>
+                <div class="pagination">
+                    <div class="pagination__display">Страница 1 из 7</div>
+                    <div class="pagination__controlls">
+                        <a href="#" class="pagination__prev"><</a>
+                        <ul class="pagination__pages">
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">1</a>
+                            </li>
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">2</a>
+                            </li>
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">3</a>
+                            </li>
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">4</a>
+                            </li>
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">5</a>
+                            </li>
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">6</a>
+                            </li>
+                            <li class="pagination__pages-item">
+                                <a href="#" class="pagination__link">7</a>
+                            </li>  
+                        </ul>
+                        <a href="#" class="pagination__prev">></a>
                     </div>
-                    <div class="reviews__desc">
-                        <div class="reviews__date">12.10.2016</div>
-                        <div class="reviews__news-name">Ночные перелёты дешевле!</div>
-                        <p class="reviews__desc-text">Летящий в ночном небе самолет — зрелище загадочное и романтическое. Крылатая машина величественно плывет в вышине, мерцая разноцветными огнями, и почему-то кажется, что она наполнена удивительными людьми, спешащими далеко-далеко по очень важным делам. </p>
-                    </div>
-                </li>
-                <li class="latest-news__item">
-                        <div class="latest-news__avatar">
-                            <img src="file/otziv/2.png" class="latest-news__avatar-img" alt="">
-                        </div>
-                        <div class="reviews__desc">
-                            <div class="reviews__date">01.02.2016</div>
-                            <div class="reviews__news-name">Путешествие в Грузию стало доступнее</div>
-                            <p class="reviews__desc-text">Экскурсии по Грузии в 2017 году от русских гидов: самые интересные маршруты в Грузии от профессиональных гидов. Обзорные, пешеходные, автомобильные, тематические экскурсии по интересным городам и курортам Грузии. Не пропустите такую возможность!</p>
-                        </div>
-                </li>
-                <li class="latest-news__item">
-                        <div class="latest-news__avatar">
-                            <img src="file/otziv/3.png" class="latest-news__avatar-img" alt="">
-                        </div>
-                        <div class="reviews__desc">
-                            <div class="reviews__date">22.12.2015</div>
-                            <div class="reviews__news-name">Детские авиабилеты доступны для бизнес-класса</div>
-                            <p class="reviews__desc-text">Путешествие на самолете с детьми - небольшое испытание для родителей. Но это не экстремальное приключение, а обычный цивилизованный поход. Тем более, различные авиакомпании стараются помочь скидками на детские авиабилеты, специальным питанием и другими услугами на борту лайнера.</p>
-                        </div>
-                </li>
-            </ul>
-        </div>
-        <div class="pagination">
-            <div class="pagination__display">Страница 1 из 7</div>
-            <div class="pagination__controlls">
-                <a href="#" class="pagination__prev"><</a>
-                <ul class="pagination__pages">
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">1</a>
-                    </li>
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">2</a>
-                    </li>
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">3</a>
-                    </li>
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">4</a>
-                    </li>
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">5</a>
-                    </li>
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">6</a>
-                    </li>
-                    <li class="pagination__pages-item">
-                            <a href="#" class="pagination__link">7</a>
-                    </li>  
-                </ul>
-                <a href="#" class="pagination__prev">></a>
+                </div>
             </div>
         </div>
     </div>
