Стилизация меню и баннера-в.2.

--- a/index.html
+++ b/index.html
@@ -26,25 +26,21 @@
                 <div class="sidebar">
                     <ul class="nav">
                         <li class="nav__item">
-                            <div class="nav__icon">
-                                <img src="./file/menu/main_icon.png" class="sidebar__menu-img" alt="">
-                            </div>
+                            <div class="nav__icon nav__link--icon-main"></div>
                             <a href="#" class="nav__title">Главная</a>
                         </li>
                         <li class="nav__item">
-                                <div class="nav__icon">
-                                    <img src="./file/menu/feed_icon.png" class="sidebar__menu-img" alt="">
-                                </div>
-                                <a href="#" class="nav__title">Отзывы</a>
+                            <div class="nav__icon nav__link--icon-feed"></div>
+                            <a href="#" class="nav__title">Отзывы</a>
                         </li>
                         <li class="nav__item">
-                                <div class="nav__icon">
-                                    <img src="./file/menu/team_icon.png" class="sidebar__menu-img" alt="">
-                                </div>
-                                <a href="#" class="nav__title">Экипаж</a>
+                            <div class="nav__icon nav__link--icon-team"></div>
+                            <a href="#" class="nav__title">экипаж</a>       
                         </li>
                     </ul>
                 </div>
+            </div>
+            <div class="banner--tarif-news">
                 <div class="banner">
                     <img src="file/airbas.png" alt="Баннер" class="banner__preview-img">
                 </div>
@@ -145,7 +141,7 @@
                         <a href="#" class="pagination__prev">></a>
                     </div>
                 </div>
-            </div>
+            </div>     
         </div>
     </div>
 </body>
