Стилизация меню и баннера в6.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container clearfix">
                 <div class="main-header__left">
                     <div class="main-header__logo">
-                        <a href="home.html" title="logo"><img src="./file/logo_header.png" alt="AirPlanet logo"></a>
+                        <a href="#" title="logo"><img src="./file/logo_header.png" alt="AirPlanet logo"></a>
                     </div>
                 </div>
                 <div class="main-header__right">
@@ -58,12 +58,12 @@
                         <img src="./file/tarif/flower.png" alt="" class="tariff__standart-preview-img">
                     </div>
                     <div class="tariff__standard--content">
-                        <h3>Стандарт</h3>
+                        <h3 class="tariff__item">Стандарт</h3>
                         <p>Создан для вашего комфортного отдыха</p>
                         <ul class="tariff__standard--contentt">
-                            <li>Питание включено</li>
-                            <li>Багаж (5 кг)</li>
-                            <li>Детское кресло</li>
+                            <li class="tarif__item">Питание включено</li>
+                            <li class="tarif__item">Багаж (5 кг)</li>
+                            <li class="tarif__item">Детское кресло</li>
                         </ul>
                         <div class="tariff__standard--content-price">$ 19</div>
                     </div>
@@ -73,12 +73,12 @@
                         <img src="./file/tarif/mark-as-favorite-star.png" alt="" class="tariff__premium-preview-img">
                     </div>
                     <div class="tariff__premium--content">
-                        <h3>Премиум</h3>
+                        <h3 class="tariff__item">Премиум</h3>
                         <p>Для любителей хороших впечатлений</p>
                         <ul class="tariff__premium--contentt">
-                            <li>Питание включено</li>
-                            <li>Багаж (5 кг)</li>
-                            <li>Детское кресло</li>
+                            <li class="tarif__item">Питание включено</li>
+                            <li class="tarif__item">Багаж (5 кг)</li>
+                            <li class="tarif__item">Детское кресло</li>
                         </ul>
                         <div class="tariff__premium--content-price">$ 39</div>
                     </div>
@@ -88,12 +88,12 @@
                         <img src="./file/tarif/painter-palette.png" alt="" class="tariff__lux-preview-img">
                     </div>
                     <div class="tariff__lux--content">
-                        <h3>Лакшери</h3>
+                        <h3 class="tariff__item">Лакшери</h3>
                         <p>Всё самое лучшее и незабываемое</p>
                         <ul class="tariff__lux--contentt">
-                            <li>Питание включено</li>
-                            <li>Багаж (5 кг)</li>
-                            <li>Детское кресло</li>
+                            <li class="tarif__item">Питание включено</li>
+                            <li class="tarif__item">Багаж (5 кг)</li>
+                            <li class="tarif__item">Детское кресло</li>
                         </ul>
                         <div class="tariff__lux--content-price">$ 99</div>
                     </div>
@@ -180,7 +180,7 @@
             </div>
             <div class="footer__center">
             <div class="footer__logo">
-                <a href="/" title="logo">
+                <a href="#" title="logo">
                 <img class="img" src="./file/footer/logo.png" alt="AirPlanet logo">
                 </a>
             </div>
