Исправлены списки в новостях и тарифах, удалены лишние стили и исправлен пустой блок

--- a/index.html
+++ b/index.html
@@ -46,78 +46,65 @@
                 </ul>
             </nav>
             <main class="content">
-                <div class="banner"></div>
-                <div class="tariffs clearfix">
+                <div class="banner">
+                    <img src="./file/airbas.png" alt="">
+                </div>
+                <div class="tariffs">
                     <h2 class="heading">Тарифы</h2>
                     <ul class="tariff-item nav__items">
-                        <li>
-                            <div class="tariff-item__header">
-                                <div class="tariff-item__img-place">
-                                    <img class="tariff-item__img" src="./file/tarif/flower.png" alt="">
-                                </div>
-                                <p class="tariff-item__name">Стандарт</p>
+                        <li class="tariff-item__nav">
+                            <div class="tariff-item__img-place">
+                                <img class="tariff-item__img" src="./file/tarif/flower.png" alt="">
                             </div>
+                            <h3 class="tariff-item__name">Стандарт</h3>
                             <div class="tariff-item__description">
-                                <div class="tariff-item__description-header">
+                                <p class="tariff-item__description-header">
                                     Создан для вашего комфортного отдыха
-                                </div>
-                                <div class="tariff-item__description-text">
-                                    <ul>
-                                        <li>Питание включено</li>
-                                        <li>Багаж (5 кг)</li>
-                                        <li>Детское кресло</li>
-                                    </ul>
-                                </div>
+                                </p>
+                                <ul class="tariff-item__description-text">
+                                    <li>Питание включено</li>
+                                    <li>Багаж (5 кг)</li>
+                                    <li>Детское кресло</li>
+                                </ul>
                             </div>
                             <div class="tariff-price">
                                 <span class="dollar">$</span>19
                             </div>
                         </li>
-                    </ul>
-                    <ul class="tariff-item">
-                        <li>
-                            <div class="tariff-item__header">
-                                <div class="tariff-item__img-place">
-                                    <img class="tariff-item__img" src="./file/tarif/mark-as-favorite-star.png" alt="">
-                                </div>
-                                <p class="tariff-item__name">Премиум</p>
+                        <li class="tariff-item__nav">
+                            <div class="tariff-item__img-place">
+                                <img class="tariff-item__img" src="./file/tarif/mark-as-favorite-star.png" alt="">
                             </div>
+                            <h3 class="tariff-item__name">Премиум</h3>
+
                             <div class="tariff-item__description">
-                                <div class="tariff-item__description-header">
+                                <p class="tariff-item__description-header">
                                     Для любителей хороших впечатлений
-                                </div>
-                                <div class="tariff-item__description-text">
-                                    <ul>
-                                        <li>Питание включено</li>
-                                        <li>Багаж (5 кг)</li>
-                                        <li>Детское кресло</li>
-                                    </ul>
-                                </div>
+                                </p>
+                                <ul class="tariff-item__description-text">
+                                    <li>Питание включено</li>
+                                    <li>Багаж (5 кг)</li>
+                                    <li>Детское кресло</li>
+                                </ul>
                             </div>
                             <div class="tariff-price">
                                 <span class="dollar">$</span>39
                             </div>
                         </li>
-                    </ul>
-                    <ul class="tariff-item">
-                        <li>
-                            <div class="tariff-item__header">
-                                <div class="tariff-item__img-place">
-                                    <img class="tariff-item__img" src="./file/tarif/painter-palette.png" alt="">
-                                </div>
-                                <p class="tariff-item__name">Лакшери</p>
+                        <li class="tariff-item__nav">
+                            <div class="tariff-item__img-place">
+                                <img class="tariff-item__img" src="./file/tarif/painter-palette.png" alt="">
                             </div>
+                            <h3 class="tariff-item__name">Лакшери</h3>
                             <div class="tariff-item__description">
-                                <div class="tariff-item__description-header">
+                                <p class="tariff-item__description-header">
                                     Всё самое лучшее и незабываемое
-                                </div>
-                                <div class="tariff-item__description-text">
-                                    <ul>
-                                        <li>Питание включено</li>
-                                        <li>Багаж (5 кг)</li>
-                                        <li>Детское кресло</li>
-                                    </ul>
-                                </div>
+                                </p>
+                                <ul class="tariff-item__description-text">
+                                    <li>Питание включено</li>
+                                    <li>Багаж (5 кг)</li>
+                                    <li>Детское кресло</li>
+                                </ul>
                             </div>
                             <div class="tariff-price">
                                 <span class="dollar">$</span>99
@@ -144,8 +131,6 @@
                                 </p>
                             </div>
                         </li>
-                    </ul>
-                    <ul class="list">
                         <li>
                             <div class="list__left">
                                 <img class="list__img" src="./file/otziv/2.png" alt="">
@@ -162,8 +147,6 @@
                                 </p>
                             </div>
                         </li>
-                    </ul>
-                    <ul class="list">
                         <li>
                             <div class="list__left">
                                 <img class="list__img" src="./file/otziv/3.png" alt="">
@@ -239,7 +222,7 @@
                     <div class="social__header">
                         Наши социальные сети
                     </div>
-                    <div>
+                
                         <ul class="social__icons">
                             <li class="social__icon">
                                 <a class="social__link" href="#">
@@ -267,10 +250,11 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
+                    
                 </div>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
