--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 <div class="banner">
                     <img src="./file/airbas.png" alt="">
                 </div>
+
                 <div class="tariffs">
                     <h2 class="heading">Тарифы</h2>
-                    <ul class="tariff-item nav__items">
-                        <li class="tariff-item__nav">
+                    <ul class="block_list">
+                        <li class="block_item">
                             <div class="tariff-item__img-place">
                                 <img class="tariff-item__img" src="./file/tarif/flower.png" alt="">
                             </div>
@@ -71,7 +72,7 @@
                                 <span class="dollar">$</span>19
                             </div>
                         </li>
-                        <li class="tariff-item__nav">
+                        <li class="block_item">
                             <div class="tariff-item__img-place">
                                 <img class="tariff-item__img" src="./file/tarif/mark-as-favorite-star.png" alt="">
                             </div>
@@ -91,7 +92,7 @@
                                 <span class="dollar">$</span>39
                             </div>
                         </li>
-                        <li class="tariff-item__nav">
+                        <li class="block_item">
                             <div class="tariff-item__img-place">
                                 <img class="tariff-item__img" src="./file/tarif/painter-palette.png" alt="">
                             </div>
@@ -110,96 +111,103 @@
                                 <span class="dollar">$</span>99
                             </div>
                         </li>
+
                     </ul>
-                </div>
-                <div class="items-list">
-                    <h2 class="heading">Последние новости</h2>
-                    <ul class="list">
-                        <li>
-                            <div class="list__left">
-                                <img class="list__img" src="./file/otziv/1.png" alt="">
-                            </div>
-                            <div class="list__right">
-                                <div class="list__time">
-                                    12.10.2016 г.
+
+                    <div class="items-list">
+                        <h2 class="heading">Последние новости</h2>
+                        <ul class="list">
+                            <li>
+                                <div class="list__left">
+                                    <img class="list__img" src="./file/otziv/1.png" alt="">
                                 </div>
-                                <h3 class="list__title">Ночные перелёты дешевле!</h3>
-                                <p class="list__text">
-                                    Летящий в ночном небе самолет — зрелище загадочное и романтическое. Крылатая машина
-                                    величественно плывет в вышине, мерцая разноцветными огнями, и почему-то кажется, что
-                                    она наполнена удивительными людьми, спешащими далеко-далеко по очень важным делам.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="list__left">
-                                <img class="list__img" src="./file/otziv/2.png" alt="">
-                            </div>
-                            <div class="list__right">
-                                <div class="list__time">
-                                    01.02.2016 г.
+                                <div class="list__right">
+                                    <div class="list__time">
+                                        12.10.2016 г.
+                                    </div>
+                                    <h3 class="list__title">Ночные перелёты дешевле!</h3>
+                                    <p class="list__text">
+                                        Летящий в ночном небе самолет — зрелище загадочное и романтическое. Крылатая
+                                        машина
+                                        величественно плывет в вышине, мерцая разноцветными огнями, и почему-то кажется,
+                                        что
+                                        она наполнена удивительными людьми, спешащими далеко-далеко по очень важным
+                                        делам.
+                                    </p>
                                 </div>
-                                <h3 class="list__title">Путешествие в Грузию стало доступ</h3>
-                                <p class="list__text">
-                                    Экскурсии по Грузии в 2017 году от русских гидов: самые интересные маршруты в Грузии
-                                    от профессиональных гидов. Обзорные, пешеходные, автомобильные, тематические
-                                    экскурсии по интересным городам и курортам Грузии. Не пропустите такую возможность!
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="list__left">
-                                <img class="list__img" src="./file/otziv/3.png" alt="">
-                            </div>
-                            <div class="list__right">
-                                <div class="list__time">
-                                    22.12.2015 г.
+                            </li>
+                            <li>
+                                <div class="list__left">
+                                    <img class="list__img" src="./file/otziv/2.png" alt="">
                                 </div>
-                                <h3 class="list__title">Детские авиабилеты доступны для бизнес-класса</h3>
-                                <p class="list__text">
-                                    Путешествие на самолете с детьми - небольшое испытание для родителей.
-                                    Но это не экстремальное приключение, а обычный цивилизованный поход.
-                                    Тем более, различные авиакомпании стараются помочь скидками на детские авиабилеты,
-                                    специальным питанием и другими услугами на борту лайнера.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="pagination">
-                    <div class="pagination__wrapper">
-                        <span class="pagination__current-page">Страница 1 из 7</span>
-                        <ul class="pagination__items">
-                            <li class="pagination__item">
-                                <a class="arrow pag-prev inactive" href="#prev">❮</a>
+                                <div class="list__right">
+                                    <div class="list__time">
+                                        01.02.2016 г.
+                                    </div>
+                                    <h3 class="list__title">Путешествие в Грузию стало доступ</h3>
+                                    <p class="list__text">
+                                        Экскурсии по Грузии в 2017 году от русских гидов: самые интересные маршруты в
+                                        Грузии
+                                        от профессиональных гидов. Обзорные, пешеходные, автомобильные, тематические
+                                        экскурсии по интересным городам и курортам Грузии. Не пропустите такую
+                                        возможность!
+                                    </p>
+                                </div>
                             </li>
-                            <li class="pagination__item active">
-                                <a href="#1">1</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a href="#2">2</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a href="#3">3</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a href="#4">4</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a href="#5">5</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a href="#6">6</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a href="#7">7</a>
-                            </li>
-                            <li class="pagination__item">
-                                <a class="arrow pag-next" href="#next">❯</a>
+                            <li>
+                                <div class="list__left">
+                                    <img class="list__img" src="./file/otziv/3.png" alt="">
+                                </div>
+                                <div class="list__right">
+                                    <div class="list__time">
+                                        22.12.2015 г.
+                                    </div>
+                                    <h3 class="list__title">Детские авиабилеты доступны для бизнес-класса</h3>
+                                    <p class="list__text">
+                                        Путешествие на самолете с детьми - небольшое испытание для родителей.
+                                        Но это не экстремальное приключение, а обычный цивилизованный поход.
+                                        Тем более, различные авиакомпании стараются помочь скидками на детские
+                                        авиабилеты,
+                                        специальным питанием и другими услугами на борту лайнера.
+                                    </p>
+                                </div>
                             </li>
                         </ul>
                     </div>
-                </div>
+                    <div class="pagination">
+                        <div class="pagination__wrapper">
+                            <span class="pagination__current-page">Страница 1 из 7</span>
+                            <ul class="pagination__items">
+                                <li class="pagination__item">
+                                    <a class="arrow pag-prev inactive" href="#prev">❮</a>
+                                </li>
+                                <li class="pagination__item active">
+                                    <a href="#1">1</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#2">2</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#3">3</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#4">4</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#5">5</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#6">6</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#7">7</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a class="arrow pag-next" href="#next">❯</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
             </main>
         </div>
     </div>
@@ -222,35 +230,35 @@
                     <div class="social__header">
                         Наши социальные сети
                     </div>
-                
-                        <ul class="social__icons">
-                            <li class="social__icon">
-                                <a class="social__link" href="#">
-                                    <img class="social__img" src="./file/footer/vk.png" alt="vk">
-                                </a>
-                            </li>
-                            <li class="social__icon">
-                                <a class="social__link" href="#">
-                                    <img class="social__img" src="./file/footer/fb.png" alt="fb">
-                                </a>
-                            </li>
-                            <li class="social__icon">
-                                <a class="social__link" href="#">
-                                    <img class="social__img" src="./file/footer/google.png" alt="google">
-                                </a>
-                            </li>
-                            <li class="social__icon">
-                                <a class="social__link" href="#">
-                                    <img class="social__img" src="./file/footer/twitter.png" alt="twitter">
-                                </a>
-                            </li>
-                            <li class="social__icon">
-                                <a class="social__link" href="#">
-                                    <img class="social__img" src="./file/footer/mail.png" alt="mail">
-                                </a>
-                            </li>
-                        </ul>
-                    
+
+                    <ul class="social__icons">
+                        <li class="social__icon">
+                            <a class="social__link" href="#">
+                                <img class="social__img" src="./file/footer/vk.png" alt="vk">
+                            </a>
+                        </li>
+                        <li class="social__icon">
+                            <a class="social__link" href="#">
+                                <img class="social__img" src="./file/footer/fb.png" alt="fb">
+                            </a>
+                        </li>
+                        <li class="social__icon">
+                            <a class="social__link" href="#">
+                                <img class="social__img" src="./file/footer/google.png" alt="google">
+                            </a>
+                        </li>
+                        <li class="social__icon">
+                            <a class="social__link" href="#">
+                                <img class="social__img" src="./file/footer/twitter.png" alt="twitter">
+                            </a>
+                        </li>
+                        <li class="social__icon">
+                            <a class="social__link" href="#">
+                                <img class="social__img" src="./file/footer/mail.png" alt="mail">
+                            </a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </div>
