--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <h3 class="section-title">Отзывы</h3>
                             <ul class="reviews__list">
                                 <li class="reviews__item">
-                                    <div class="reviews__avatar">
+                                    <div class="reviews__avatar clearfix">
                                         <img src="./file/otziv/1.png" class="reviews__avatar-pic" alt="">
                                     </div>
                                     <div class="reviews__description">
