--- a/index.html
+++ b/index.html
@@ -29,22 +29,27 @@
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <img class="nav__img" src="./file/menu/main_icon.png" alt="">
+                            <div class="nav__img">
+                            <img class="nav__img--icon" src="./file/menu/main_icon.png" alt="">
+                            </div>
                             <a href="#" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
-                            <img class="nav__img" src="./file/menu/feed_icon.png" alt="">
+                            <div class="nav__img">
+                            <img class="nav__img--icon" src="./file/menu/feed_icon.png" alt="">
+                            </div>
                             <a href="#" class="nav__link">Отзывы</a>
                         </li>
                         <li class="nav__item">
-                            <img class="nav__img" src="./file/menu/team_icon.png" alt="">
+                                <div class="nav__img">
+                            <img class="nav__img--icon" src="./file/menu/team_icon.png" alt="">
+                            </div>
                             <a href="#" class="nav__link">Экипаж</a>
                         </li>
                     </ul>
                 </nav>
             </aside>
 
-            <main class="content">
                 <div class="banner">
                     <img src="./file/airbas.png" alt="">
                 </div>
@@ -170,7 +175,6 @@
                 </div>
 
                 <div class="pagination">
-
                     <nav class="nav__pagination">
                         <span class="pagination__page">Страница 1 из 7</span>
                         <div class="pagination__item">
@@ -205,7 +209,6 @@
                     </nav>
                 </div>
             </main>
-        </main>
     </div>
     </div>
     <footer class="footer">
