--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </div>
             </div>
         </header>
+        <div class="maincontent">
             <aside class="aside">
                 <nav class="nav">
                     <ul class="nav__list">
@@ -48,7 +49,7 @@
                     </ul>
                 </nav>
             </aside>
-            <main class="maincontent">
+            <main class="main">
                 <div class="banner">
                     <img src="./file/airbas.png" alt="">
                 </div>
