--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             <div class="block__img">
                                 <img src="./file/tarif/flower.png" alt="">
                             </div>
+                            <div class="block__content">
                             <h3 class="block__text">Стандарт</h3>
-                            <div class="block__description">
                                 <div class="block__description--header">
                                     Создан для вашего комфортного отдыха
                                 </div>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="reviews">
-                    <h3 class="heading__text">Отзывы</h3>
+                    <h3 class="heading__text">Последние новости</h3>
                     <ul class="reviews__list">
                         <li class="reviews__item">
                             <div class="reviews__avatar">
