--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <div class="wrapper">
-        <header class="header header__container clearfix">
-            <div class="container">
+        <header class="header">
+            <div class="container header__container">
                 <a href="#" class="header__logo" title="logo">
                     <img class="logo__picture" src="./file/logo_header.png" alt="AirPlanet logo">
                 </a>
                 <div class="header__contacts">
                     <a href="tel:+78002000505" class="header__phone">8-800-200-05-05</a>
-                    <span href="#" class="header__shedule">График работы</span>
+                    <div href="#" class="header__shedule">График работы</div>
                 </div>
             </div>
         </header>
